<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/nfc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/nfc_layout_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/nfc_writer_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nfc_title"
        android:layout_marginTop="63dp"
        android:text="@string/nfc_instructions"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/nfc_writer_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/nfc_writer_instructions"
        android:layout_centerVertical="true"
        android:ems="10" />

    <EditText
        android:id="@+id/nfc_writer_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nfc_writer_ssid"
        android:layout_below="@+id/nfc_writer_ssid"
        android:layout_marginTop="56dp"
        android:ems="10" />
   
     <Button
        android:id="@+id/nfc_back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/back_to_main" />

     <TextView
        android:id="@+id/ssid_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nfc_writer_pwd"
        android:layout_alignRight="@+id/pwd_label"
        android:text="@string/nfc_ssid_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
         
    <TextView
        android:id="@+id/pwd_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nfc_writer_pwd"
        android:layout_alignBottom="@+id/nfc_writer_pwd"
        android:layout_toLeftOf="@+id/nfc_writer_pwd"
        android:text="@string/nfc_pwd_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />



</RelativeLayout>